[project]
name = "wemunpackerui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.9.1",
]

[[tool.uv.index]]
url = "pypi.tuna.tsinghua.edu.cn/simple"

[dependency-groups]
dev = [
    "pyinstaller>=6.14.2",
]
